# Jeu-multijoueur-en-ligne-Rsking

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md
CMakeModules/: CTest2JUnit.py
doc/: architecture_generale.adoc  architecture_serveur.adoc  communication.adoc  jwt.adoc  messages.adoc
doc/BDD/: schema.sql
doc/bdd/: schema.adoc
doc/res/: afd_dispatcher.graphviz  seq_init_ws.txt  seq_reception_message.txt
doc/specif_stockage_cartes/: rep_logique_carte_mexique.txt  specif_stockage_cartes.adoc
include/: configuration.h  coverage.h  dbms.h  generator.h  logicexception.h  otlv4.h
include/jwt/: jwt.h
include/logic/: atk_result.h  dice_roll.h  game.h  gameparameters.h  lobby.h  lobbypool.h  map.h  player.h
include/network/: dispatcher.h  fail.h  gamedispatcher.h  listener.h  lobbydispatcher.h  lobbypooldispatcher.h  lpd.h  messages.h  session.h  ssl.h  unserialize.h
maps/: 1
sql/: create_unittest_data.sql  create_unittest_user.sql  function.sql  schema.sql
src/: configuration.h.in  coverage.cpp  dbms.cpp  gamedispatcher.cpp  generator.cpp  lobby.cpp  lobbypool.cpp  logicexception.cpp  main.cpp
src/jwt/: jwt.cpp
src/logic/: dice_roll.cpp  game.cpp  lobby.cpp  lobbypool.cpp  map.cpp  player.cpp
src/network/: fail.cpp  gamedispatcher.cpp  listener.cpp  lobbydispatcher.cpp  lobbypooldispatcher.cpp  lpd.cpp  session.cpp  ssl.cpp  unserialize.cpp
src/stubs/: stubs.cpp
tests/: attack_test.cpp  bdd.cpp  boost.cmake  certificate.cert  cmake.cpp  dice_test.cpp  game_test.cpp  jwt.cpp  lobbypooltest.cpp  lobbytest.cpp  main_test.cpp  map_test.cpp  network_gamedispatcher.cpp  network_listener.cpp  network_lobbydispatcher.cpp  network_lobbypooldispatcher.cpp  network_session.cpp  network_ssl.cpp  network_un_serialization.cpp  player_id.cpp  pri.key  test_cmake.cpp  transfer_atk.cpp  troops_distribution.cpp
tests/testmaps/: 100  101  102  103  104  105  106  107  108  109  110  111  112  113  114  115  116  200
tools/: clean_db.sh  prepare_sql_tests.sh  svg_fusion.sh
utils/: coverage_report.py  ssl_injection.cpp
